[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/World/Exploration/Ship3D/Ship3D.gd" type="Script" id=1]
[ext_resource path="res://scenes/World/Exploration/Ship3D/MiniMap.gd" type="Script" id=2]
[ext_resource path="res://assets/shaders/flag.shader" type="Shader" id=3]
[ext_resource path="res://assets/art/shapes/pinhole.png" type="Texture" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.5, 2 )

[sub_resource type="PrismMesh" id=8]
size = Vector3( 2, 2, 1 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.1
bottom_radius = 0.1
height = 6.5

[sub_resource type="CubeMesh" id=5]
size = Vector3( 2.5, 0.1, 4 )

[sub_resource type="OpenSimplexNoise" id=11]

[sub_resource type="NoiseTexture" id=12]
seamless = true
noise = SubResource( 11 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 3 )
shader_param/uv_offset_scale = Vector2( -0.2, -0.1 )
shader_param/time_scale = Vector2( 0.3, 0 )
shader_param/face_distortion = 0.5
shader_param/uv_offset_texture = SubResource( 12 )

[sub_resource type="PlaneMesh" id=14]
material = SubResource( 13 )
size = Vector2( 1, 0.7 )
subdivide_width = 32
subdivide_depth = 32

[sub_resource type="CylinderMesh" id=16]
top_radius = 0.5
bottom_radius = 0.3
height = 0.5

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.1
bottom_radius = 0.1
height = 5.5

[sub_resource type="CubeMesh" id=7]
size = Vector3( 2.5, 0.1, 3 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 2, 1.7, 1.7 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.2, 0.75, 1.25 )

[sub_resource type="CylinderMesh" id=15]
top_radius = 0.0
bottom_radius = 0.25
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hull:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.25, 0 ) ]
}

[node name="Ship3D" type="KinematicBody"]
script = ExtResource( 1 )

[node name="body collision" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="hull" type="CSGBox" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
layers = 3
height = 1.0
depth = 4.0

[node name="head" type="MeshInstance" parent="hull"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = null

[node name="Masts" type="Spatial" parent="hull"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )

[node name="main" type="MeshInstance" parent="hull/Masts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.72829, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="mast" type="MeshInstance" parent="hull/Masts/main"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.479591, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="jolly_roger" type="MeshInstance" parent="hull/Masts/main"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.370373, 2.90313, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="crow_s_nest" type="MeshInstance" parent="hull/Masts/main"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99241, 0 )
mesh = SubResource( 16 )
material/0 = null

[node name="Camera" type="Camera" parent="hull/Masts/main/crow_s_nest"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.5, 0 )
far = 10000.0

[node name="front" type="MeshInstance" parent="hull/Masts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35007, 1.46564 )
mesh = SubResource( 6 )
material/0 = null

[node name="mast" type="MeshInstance" parent="hull/Masts/front"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.560688, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="rear" type="MeshInstance" parent="hull/Masts"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35007, -1.34327 )
mesh = SubResource( 6 )
material/0 = null

[node name="mast" type="MeshInstance" parent="hull/Masts/rear"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.560688, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="cabin" type="MeshInstance" parent="hull"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.36504e-07, 0.348823, 2.70529 )
mesh = SubResource( 9 )
material/0 = null

[node name="rudder" type="MeshInstance" parent="hull/cabin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.59133e-08, -0.363885, 0.75396 )
mesh = SubResource( 10 )
material/0 = null

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Minimap" type="ColorRect" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Minimap"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="GUI/Minimap/VBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="GUI/Minimap/VBoxContainer/ViewportContainer"]
size = Vector2( 250, 150 )
transparent_bg = true
handle_input_locally = false
usage = 3
render_target_update_mode = 3

[node name="MiniMap" type="Camera" parent="GUI/Minimap/VBoxContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50, 0 )
current = true
script = ExtResource( 2 )

[node name="PoisitionLabel" type="Label" parent="GUI/Minimap/VBoxContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="GUI/Minimap/VBoxContainer"]
margin_top = 172.0
margin_right = 250.0
margin_bottom = 186.0

[node name="MemComDialog" type="PopupMenu" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -188.0
margin_right = 126.5
margin_bottom = 188.0

[node name="pinhole" type="TextureRect" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
texture = ExtResource( 4 )
expand = true

[node name="AngleLabel" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "190
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.5, 0 )
mesh = SubResource( 15 )
material/0 = null

[node name="Gimbal" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Gimbal"]
transform = Transform( -1, 2.26267e-08, -8.44439e-08, -3.65022e-09, 0.954277, 0.298924, 8.73466e-08, 0.298924, -0.954277, 0, 6.87053, -10 )
current = true
far = 1000.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )

[node name="AutosaveTimer" type="Timer" parent="."]
autostart = true

[connection signal="about_to_show" from="GUI/MemComDialog" to="." method="_on_MemComDialog_about_to_show"]
[connection signal="id_pressed" from="GUI/MemComDialog" to="." method="_on_MemComDialog_id_pressed"]
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_AutosaveTimer_timeout"]
